--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,9 @@
                         <button type="submit" class="btn btn-link text-white ms-3" style="padding:0; border:none; background:none;">Выйти</button>
                     </form>
                 {% else %}
-                    <a class="nav-link" href="{% url 'login' %}">Войти</a>
-                {% endif %}
+    <a class="nav-link text-white" href="{% url 'login' %}">Войти</a>
+    <a class="nav-link text-white" href="{% url 'register' %}">Регистрация</a>
+{% endif %}
             </div>
         </div>
     </nav>
