--- a/templates/base.html
+++ b/templates/base.html
@@ -33,5 +33,6 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+    {% block footer %}{% endblock %}
 </body>
 </html>
