--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,21 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card">
-    <div class="card-body">
-        <h2 class="card-title">Вход в систему</h2>
-        <form method="post">
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Вход в систему</h2>
+          <form method="post">
             {% csrf_token %}
             <div class="mb-3">
-                <label class="form-label">Имя пользователя</label>
-                <input type="text" name="username" class="form-control">
+              <label class="form-label">Имя пользователя</label>
+              <input type="text" name="username" class="form-control">
             </div>
             <div class="mb-3">
-                <label class="form-label">Пароль</label>
-                <input type="password" name="password" class="form-control">
+              <label class="form-label">Пароль</label>
+              <input type="password" name="password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-primary">Войти</button>
-        </form>
+            <button type="submit" class="btn btn-primary w-100">Войти</button>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 {% endblock %}
