--- a/templates/assignments/submission_grade.html
+++ b/templates/assignments/submission_grade.html
@@ -1,9 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Оценить решение</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Сохранить</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h4 class="mb-0">Оценить решение</h4>
+                </div>
+                <div class="card-body">
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label class="form-label" for="{{ form.grade.id_for_label }}">Оценка</label>
+                            {{ form.grade }}
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="{{ form.feedback.id_for_label }}">Комментарий</label>
+                            {{ form.feedback }}
+                        </div>
+                        <button type="submit" class="btn btn-success w-100">Сохранить</button>
+                        <a href="javascript:history.back()" class="btn btn-secondary w-100 mt-2">Назад</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
